[package]
name = "jwt_handler-provider"
version = "2.0.0"
edition = "2021"
resolver = "2"

[dependencies]
async-trait = "0.1"
wasmbus-rpc = "0.11"
wasmcloud-interface-httpserver = "0.8"
jwt_provider = "1.0.15"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"
chrono = "0.4.24"
tokio = "1.26.0"

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.6"
tokio = { version = "1", features = [ "full" ] }

[[bin]]
name = "jwt_handler_provider"
path = "src/main.rs"
